add notification routes
